# recycler

./: .travis.yml  Cargo.toml  README.md  index.html  search-index.js
benches/: benches.rs
implementors/core/default/: trait.Default.js
implementors/core/ops/: trait.Deref.js  trait.DerefMut.js
implementors/recycler/: trait.Recycler.js
recycler/: fn.make_recycler.html  index.html  sidebar-items.js  struct.OptionRecycler.html  struct.StringRecycler.html  struct.TrashRecycler.html  struct.VecRecycler.html  trait.Recyclable.html  trait.Recycler.html
src/: lib.rs
src/recycler/: lib.rs.html
