[package]
name = "recycler"
version = "0.1.4"
authors = ["Frank McSherry <fmcsherry@me.com>"]

description = "A small Rust library for recycling types containing owned memory"

# These URLs point to more information about the repository
documentation = "https://github.com/frankmcsherry/recycler"
homepage = "https://github.com/frankmcsherry/recycler"
repository = "https://github.com/frankmcsherry/recycler"

# This points to a file in the repository (relative to this Cargo.toml). The
# contents of this file are stored and indexed in the registry.
readme = "README.md"

# This is a small list of keywords used to categorize and search for this
# package.
keywords = ["recycler", "pool", "pooling"]

# This is a string description of the license for this package. Currently
# crates.io will validate the license provided against a whitelist of known
# license identifiers from http://spdx.org/licenses/. Multiple licenses can
# be separated with a `/`
license = "MIT"
